--- a/htmlanimation/styles.css
+++ b/htmlanimation/styles.css
@@ -10,12 +10,21 @@ background-color: aqua;
 width: 200px;
 height: 200px;
 border-radius: 20px;
+margin: 50px auto;
+}
+
+.button-div{
+    text-align: center;
 }
 
 .button{
     color: blue;
     background-color: aquamarine;
     padding: 15px;
+    display: block;
+    width: 100px;
+    text-align: center;
+    text-decoration: none;
 
 }
 
